# SocExplorer2

./: .gitignore  meson.build
opaque-1.3.0/: CMakeLists.txt
opaque-1.3.0/include/opaque/: opaque.hpp
resources/: SocExplorer.qrc
src/: SocExplorerObject.hpp  Workspace.hpp  address.h  meson.build
src/Factory/: SocExplorerFactory.cpp  SocExplorerFactory.hpp
src/Soc/: Soc.cpp  Soc.hpp  SocModule.cpp  SocModule.hpp
src/Workspaces/: Workspace.cpp  Workspace.hpp  WorkspacesManager.cpp  WorkspacesManager.hpp
src/bindings/: PySocModule.cpp  PySocModule.hpp  SocExplorerApp.cpp  SocExplorerApp.hpp  bindings.h  bindings.xml  main.py  meson.build  src_list.py
src/bindings/SocExplorerBindings/: meson.build
src/gui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  workspacewidget.cpp  workspacewidget.hpp  workspacewidget.ui
src/plugin/: IFactory.hpp  ISoc.hpp  ISocModule.hpp  SocModule.cpp  SocModule.hpp
src/plugins/: meson.build
src/plugins/bundled/: bundled_plugins.cpp  bundled_plugins.hpp  meson.build
src/plugins/bundled/leon3_soc/: Leon3Soc.cpp  Leon3Soc.hpp  meson.build
src/plugins/bundled/rmap/: meson.build  rmap_plugin.cpp  rmap_plugin.hpp  rmappluginui.cpp  rmappluginui.hpp  rmappluginui.ui
subprojects/: QtGuiTestUtils.wrap  catch2.wrap  channels.wrap  cpp_utils.wrap  cppdict.wrap  range-v3.wrap  spacewirepp.wrap  spacewirezmq.wrap  spdlog.wrap  yas.wrap
tests/bindings/: basic_tests.py  factory_tests.py  meson.build  pysocmodule_tests.py  soc_tests.py  socexplorerobject_tests.py  test_soc.py  test_socexplorerobject.py  test_workspace.py  workspace_tests.py
